index.html and main.js were updated

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simulador</title>
+    <title>Simulador de Sorteo</title>
     <link rel="stylesheet" href="./assets/style.css" />
     <script defer src="./main.js"></script>
   </head>
   <header></header>
   <body>
-    <h1>Engregable1Alberto</h1>
-    <p></p>
+    <h1>Simulador de Sorteo Aleatorio</h1>
+    <p>
+      Este simulador permite ingresar una cantidad de participantes, registrar
+      sus nombres y elegir un ganador al azar. Toda la interacción se realiza
+      por medio de cuadros de diálogo (prompt, alert, confirm) y la consola del
+      navegador.
+    </p>
   </body>
 </html>
