styles were added on the styles.css file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="container">
       <h1>Simulador de Sorteo</h1>
       <p class="subtext">
-        Ingresá participantes, administrá la lista y realizá el sorteo. Los
-        datos se guardan en tu navegador (localStorage).
+        Ingresá participantes, podes administrar la lista y realizar el sorteo.
+        Los datos se guardan en el localStorage del navegador.
       </p>
     </header>
     <main class="container">
