--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simulador de Sorteo</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <script defer src="./assets/js/main.js"></script>
   </head>
   <body>
     <header class="container">
@@ -50,6 +51,5 @@
         >Entregable 2 – Integración JS + DOM + Eventos + localStorage</small
       >
     </footer>
-    <script src="./assets/js/main.js"></script>
   </body>
 </html>
